funzione ricerca funzionante (dovrei testarla con il db carico)

--- a/Website/Css/Pages/pages_style.css
+++ b/Website/Css/Pages/pages_style.css
@@ -12,6 +12,7 @@
 #home-text{
 	position:absolute;
 	margin-top: 10%;
+	text-shadow: 0px 0px 10px #000;
 	margin-bottom: auto;
 	width: 100%;
 	font-family: PoiretOne;
