--- a/Website/Css/Pages/pages_style.css
+++ b/Website/Css/Pages/pages_style.css
@@ -140,8 +140,22 @@
 	padding: 20px;
 }
 
+#div-result-pages-buttons{
+	width: 100%;
+	display: inline-block;
+    text-align: center;
+	padding: 3%;
+}
+
+#pages-count{
+	font-size: 2vw;
+	vertical-align: middle;
+	display: inline-block;
+	padding: 4px 6px 3px 6px;
+}
+
 .card-img{
-	width: 40%;
+	width: 50%;
 	height: auto;
 }
 
@@ -193,4 +207,33 @@
 #div-btn-save-load{
 	width: 100%;
 	margin: auto;
+	margin-bottom: 20px;
+}
+
+.deck_card{
+	color: #FFFFFF;
+	padding: 3px;
+	font-size: 2vw;
+}
+
+.div-popup{
+  text-align: center;
+  position: absolute;
+  visibility: hidden;
+}
+
+.btn-search-result-page{
+	color: #363636;
+}
+
+.pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover {
+	background-color: #718EA4;
+	border-color: #718EA4;
+}
+.pagination > li > a{
+	color: #718EA4;
+}
+
+.pagination > li > a:focus, .pagination > li > a:hover, .pagination > li > span:focus, .pagination > li > span:hover{
+	border-color: #718EA4;
 }
