--- a/Website/Css/Pages/pages_style.css
+++ b/Website/Css/Pages/pages_style.css
@@ -5,7 +5,7 @@
 #img-background-home{
 	width: 100%;
 	height: 100%;
-	background: url(../../immagini/home_wallpaper/home_background_1.jpg) center center fixed no-repeat;
+	background: url(http://cdn.paper4pc.com/images/magic-the-gathering-wallpaper-11.jpg) center center fixed no-repeat;
 	background-size: cover;
 }
 
@@ -121,15 +121,18 @@
 	margin-bottom: 0;
 }
 
-#cards-container{
+.hidden-scrollbar{
 	top: 0;
 	position: relative;
 	left: 50%;
 	transform: translateX(-50%);
-	width: 95%;
-	height: 88%;
 	overflow-y: scroll;
 	visibility: hidden;
+}
+
+#cards-container{
+	width: 95%;
+	height: 88%;
 }
 
 #div-cards-container{
@@ -208,6 +211,19 @@
 	width: 100%;
 	margin: auto;
 	margin-bottom: 20px;
+}
+
+#deck-container{
+	width: 95%;
+	height: 90%;
+}
+
+#div-deck-container{
+	visibility: visible;
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	padding: 20px;
 }
 
 .deck_card{
