--- a/Website/Css/Pages/pages_style.css
+++ b/Website/Css/Pages/pages_style.css
@@ -226,6 +226,13 @@
 	padding: 20px;
 }
 
+#card_information{
+	display: inline-block;
+	text-align: center;
+    align-items: center;
+	width: 1200px;
+}
+
 .deck_card{
 	color: #FFFFFF;
 	padding: 3px;
@@ -233,9 +240,29 @@
 }
 
 .div-popup{
-  text-align: center;
-  position: absolute;
-  visibility: hidden;
+	text-align: center;
+	position: absolute;
+	margin: auto;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	height:100%;
+	width:100%;
+}
+
+.card-link{
+	color: #FFF;
+}
+
+.hidden-popup{
+	z-index: -99;
+	visibility: hidden;
+}
+
+.visible-popup{
+	z-index: 99;
+	visibility: visible;
 }
 
 .btn-search-result-page{
